Compatability with latest handover

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,36 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+DB_HANDOVER_HOST=127.0.0.1
+DB_HANDOVER_PORT=3306
+DB_HANDOVER_DATABASE=
+DB_HANDOVER_USERNAME=''
+DB_HANDOVER_PASSWORD=''
+DB_HANDOVER_TABLE_PREFIX=
+
+OAUTH_ID=
+OAUTH_SECRET=
+OAUTH_URL=""
+
+# If you use custom OAuth you can map these data variables, leave blank for VATSIM Connect
+OAUTH_MAPPING_CID=data-id
+OAUTH_MAPPING_EMAIL=data-email
+OAUTH_MAPPING_FIRSTNAME=data-first_name
+OAUTH_MAPPING_LASTNAME=data-last_name
+OAUTH_MAPPING_RATING=data-vatsim_details-controller_rating-id
+OAUTH_MAPPING_RATING_SHORT=data-vatsim_details-controller_rating-short
+OAUTH_MAPPING_RATING_LONG=data-vatsim_details-controller_rating-long
+OAUTH_MAPPING_REGION=data-vatsim_details-region
+OAUTH_MAPPING_DIVISION=data-vatsim_details-division
+OAUTH_MAPPING_SUBDIVISION=data-vatsim_details-subdivision
+
+CC_URL = ""
+CC_API_SECRET=""
+
+FORUM_API_URL=""
+FORUM_CALENDAR_TYPE=
+FORUM_API_SECRET=""
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
