--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
         "bootstrap": "^4.3.1",
+        "dotenv": "^16.4.5",
+        "flatpickr": "^4.6.13",
         "jquery": "^3.7.0",
         "laravel-vite-plugin": "^0.7.2",
         "moment": "^2.29.4",
