--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.0",
+        "@fullcalendar/bootstrap": "^6.1.14",
+        "@fullcalendar/core": "^6.1.14",
+        "@fullcalendar/daygrid": "^6.1.14",
+        "@fullcalendar/interaction": "^6.1.14",
+        "@fullcalendar/list": "^6.1.14",
+        "@fullcalendar/timegrid": "^6.1.14",
         "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
         "bootstrap": "^4.3.1",
