--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
         "@fullcalendar/interaction": "^6.1.14",
         "@fullcalendar/list": "^6.1.14",
         "@fullcalendar/timegrid": "^6.1.14",
-        "@popperjs/core": "^2.11.6",
+        "@popperjs/core": "^2.11.8",
         "axios": "^1.1.2",
         "bootstrap": "^4.3.1",
+        "bootstrap-table": "^1.19.1",
+        "core-js": "^3.37.1",
         "dotenv": "^16.4.5",
         "flatpickr": "^4.6.13",
         "jquery": "^3.7.0",
