--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "league/commonmark": "^2.4",
-        "league/oauth2-client": "^2.7"
+        "league/oauth2-client": "^2.7",
+        "spatie/laravel-login-link": "^1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
