Removed unused config vars and added github actions

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
-APP_NAME=Laravel
+APP_NAME="Event Manager"
+APP_OWNER_NAME="VATSIM Scandinavia"
+APP_OWNER_NAME_SHORT="SCA"
+APP_OWNER_CODE="SCA"
+
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:l9zh+pX5n9ueU/UW7TygDoMVJj14zBo0MM13smdcfL0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=''
+
+APP_LOGO="vatsca.svg"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,39 +17,28 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE='events'
+DB_USERNAME=''
+DB_PASSWORD=''
 
 DB_HANDOVER_HOST=127.0.0.1
 DB_HANDOVER_PORT=3306
-DB_HANDOVER_DATABASE=
+DB_HANDOVER_DATABASE=handover
 DB_HANDOVER_USERNAME=''
 DB_HANDOVER_PASSWORD=''
 DB_HANDOVER_TABLE_PREFIX=
 
-OAUTH_ID=
-OAUTH_SECRET=
+OAUTH_ID=""
+OAUTH_SECRET=""
 OAUTH_URL=""
 
 # If you use custom OAuth you can map these data variables, leave blank for VATSIM Connect
-OAUTH_MAPPING_CID=data-id
-OAUTH_MAPPING_EMAIL=data-email
-OAUTH_MAPPING_FIRSTNAME=data-first_name
-OAUTH_MAPPING_LASTNAME=data-last_name
-OAUTH_MAPPING_RATING=data-vatsim_details-controller_rating-id
-OAUTH_MAPPING_RATING_SHORT=data-vatsim_details-controller_rating-short
-OAUTH_MAPPING_RATING_LONG=data-vatsim_details-controller_rating-long
-OAUTH_MAPPING_REGION=data-vatsim_details-region
-OAUTH_MAPPING_DIVISION=data-vatsim_details-division
-OAUTH_MAPPING_SUBDIVISION=data-vatsim_details-subdivision
+OAUTH_MAPPING_CID=data-cid
+OAUTH_MAPPING_EMAIL=data-personal-email
+OAUTH_MAPPING_FIRSTNAME=data-personal-name_first
+OAUTH_MAPPING_LASTNAME=data-personal-name_last
 
-CC_URL = ""
-CC_API_SECRET=""
-
-FORUM_API_URL=""
-FORUM_CALENDAR_TYPE=
-FORUM_API_SECRET=""
+EVENTS_API_KEY=""
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
