--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,5 @@
 ---
-name: "Build"
+name: "Test & Build"
 
 on:
   push:
@@ -7,19 +7,19 @@ on:
       - "**.md"
 
 env:
-  IMAGE_NAME: vatsim-scandinavia/handover
+  IMAGE_NAME: vatsim-scandinavia/events
   TARGET_PLATFORMS: linux/amd64,linux/arm64
 
 jobs:
   build-container:
-    name: Build Events Container
+    name: Build Event Manager Container
     runs-on: ubuntu-latest
     steps:
       - name: configure docker buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: login to github container registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -27,7 +27,7 @@ jobs:
 
       - name: setup container metadata
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: |
             ghcr.io/${{ env.IMAGE_NAME }}
@@ -39,10 +39,38 @@ jobs:
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
 
       - name: build & push container image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           context: "{{defaultContext}}:."
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: ${{ env.TARGET_PLATFORMS }}
+
+  test-app:
+    name: Event Manager Test Suite
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Event Manager
+      uses: actions/checkout@v4
+      with:
+        path: events
+
+    - name: Setup dependencies for Event Manager
+      uses: ./events/.github/actions/setup-dependencies
+      with:
+        path: events
+        setup-node: true
+
+    - name: Setup Event Manager
+      uses: ./events/.github/actions/setup-project
+      with:
+        path: events
+        setup-node: true
+        seed-database: true
+      env:
+        DB_CONNECTION: sqlite-testing
+
+    - name: Execute unit and feature tests via PHPUnit
+      run: ./vendor/bin/phpunit --color=always --testdox
+      working-directory: ./events
