--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ APP_OWNER_CODE="SCA"
 APP_ENV=local
 APP_KEY=base64:l9zh+pX5n9ueU/UW7TygDoMVJj14zBo0MM13smdcfL0=
 APP_DEBUG=true
-APP_URL=''
+APP_URL="http://localhost"
 
 APP_LOGO="vatsca.svg"
 
