--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "axios": "^1.1.2",
         "bootstrap": "^4.3.1",
         "bootstrap-table": "^1.19.1",
+        "bs-custom-file-input": "^1.3.4",
         "core-js": "^3.37.1",
         "dotenv": "^16.4.5",
         "flatpickr": "^4.6.13",
