--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ APP_URL="http://localhost"
 
 APP_LOGO="vatsca.svg"
 
+SENTRY_LARAVEL_DSN=
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
