--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ui": "^4.2",
         "league/commonmark": "^2.4",
         "league/oauth2-client": "^2.7",
+        "sentry/sentry-laravel": "^4.9",
         "spatie/laravel-login-link": "^1.3"
     },
     "require-dev": {
