Added network retries, fixed calendar deletion.

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,18 @@ APP_LOGO="vatsca.svg"
 DISCORD_WEBHOOK=""
 DISCORD_MENTION_ROLE=""
 
+DISCORD_BOT_TOKEN=""
+DISCORD_GUILD_ID=""
+
+DISCORD_API_URL=""
+DISCORD_API_TOKEN=""
+
+API_RETRY_TIMES= # times
+API_RETRY_DELAY= # milliseconds
+
+CC_API_URL=""
+CC_API_TOKEN=""
+
 SENTRY_LARAVEL_DSN=
 
 LOG_CHANNEL=stack
