Updated to Laravel 11

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ APP_URL="http://localhost"
 
 APP_LOGO="vatsca.svg"
 
+SPATIE_LOGIN_LINK_HOST="" # IP address of the server and only for local env
+
 DISCORD_WEBHOOK=""
 DISCORD_MENTION_ROLE=""
 
